welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code

override def run() {
var diag=0;
var x=0
ecritMessage(x)
x=x+1
for (i<-0 to 6)
diag=diag+1
setPos(i,diag)
while (estFaceMur==false){
	
	ecritMessage(x);
	x=x+1
	setPos(getX()+1,getY()-1)
	ecritMessage(x)
	x=x+1
}

}
